[build-system]
requires = ["setuptools>=42", "wheel", "typing_extensions >= 4.6.3, <5", "pydantic>=2, <3", "numpy>=1.20, <2"]
build-backend = "setuptools.build_meta"

[project]
name = "forcedimension"
version = "0.2.0rc1"
authors = [
    { name="Ember Chow", email="emberchow.business@gmail.com" },
]
description = "Python Bindings for the ForceDimension SDK"
readme = "README.md"
requires-python = ">=3.8"
license = {file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/EmDash00/forcedimension-python"

