[tool.poetry]
name = "forcedimension"
version = "0.2.0b1"
description = "Unofficial, Experimental, High-Level Python Wrappers for the Force Dimension SDK"
authors = ["Ember Chow <emberchow.business@gmail.com>"]
readme = "README.md"
license = "LGPL-3.0"
documentation = "https://forcedimension-python-documentation.readthedocs.io/en/latest/"
repository = "https://github.com/EmDash00/forcedimension-python"
keywords = ["forcedimension", "haptics", "wrappers"]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Human Interface Device (HID)"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
forcedimension-core = { version = "~1.0.0", extras = ["numpy"] }
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[virtualenvs]
in-project = true