[metadata]
name = forcedimension
version = 0.0.1
author = Ember Chow
author_email = emberchow.business@gmail.com 
description = Python Bindings for the ForceDimension SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EmDash00/forcedimension-python
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8 
    Programming Language :: Python :: 3.9
    Operating System :: Unix
    Operating System :: Windows
license_files = LICENSE

[options]
package_dir == forcedimension
packages = find:
python_requires = >=3.8

[options.packages.find]
where = forcedimension

[options.extras_require]
numpy = 
    numpy>=1.20
all =
    numpy>=1.20
